--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^0.28.7",
+    "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
@@ -30,6 +31,8 @@
   },
   "dependencies": {
     "react": "^16.1.1",
-    "react-dom": "^16.1.1"
+    "react-animate-height": "^0.10.8",
+    "react-dom": "^16.1.1",
+    "react-responsive": "^4.0.3"
   }
 }
