--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "file-loader": "^1.1.5",
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
@@ -33,6 +34,8 @@
     "react": "^16.1.1",
     "react-animate-height": "^0.10.8",
     "react-dom": "^16.1.1",
-    "react-responsive": "^4.0.3"
+    "react-remarkable": "^1.1.3",
+    "react-responsive": "^4.0.3",
+    "remarkable": "^1.7.1"
   }
 }
