--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     "react-dom": "^16.1.1",
     "react-remarkable": "^1.1.3",
     "react-responsive": "^4.0.3",
-    "react-router": "^4.2.0",
-    "remarkable": "^1.7.1"
+    "react-router": "^4.2.0"
   }
 }
