--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "html-webpack-plugin": "^2.30.1",
     "node-sass": "^4.7.2",
     "raw-loader": "^0.5.1",
-    "react-router-dom": "^4.2.2",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0",
     "url-loader": "^0.6.2",
@@ -37,6 +36,6 @@
     "react-dom": "^16.1.1",
     "react-remarkable": "^1.1.3",
     "react-responsive": "^4.0.3",
-    "react-router": "^4.2.0"
+    "react-router-dom": "^4.2.2"
   }
 }
